[package]
authors = ["Louis Birla <louis.birla@gmail.com>"]
edition = "2018"
name = "loop_api"
version = "0.0.2"

[dependencies]
# Server
juniper_warp = "0.6.1"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
# Database
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"
# GraphQL
juniper = "0.15.3"
serde_json = "1.0.61"
# Passwords
rust-argon2 = "0.8.3"
rand = "0.8.3"
# Users
regex = "1.4.3"
lettre = "0.10.0-alpha.4"
chrono = "0.4.19"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
