[package]
authors = ["Louis Birla <louis.birla@gmail.com>"]
edition = "2018"
name = "loop-api"
version = "0.2.0"
publish = false

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.8.4"
regex = "1.4.6"
strsim = "0.10.0"
tokio = { version = "1.8.2", features = ["full"] }

## Server
async-graphql = "2.5.1"
async-graphql-warp = "2.5.1"
warp = "0.3.1"

## Block Types
block-tools = { path = "../block-tools" }
block-types = { path = "../block-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## Subscriptions
async-stream = "0.3.2"
futures = "0.3"
once_cell = "1.8.0"
slab = "0.4.3"

## Logging
log = "0.4.13"
pretty_env_logger = "0.4.0"

## Sign up
lettre = "0.10.0-rc.3"
rust-argon2 = "0.8.3"
