[package]
version = "0.1.7"
name = "block-tools"
description = "Tools for block types on Loop"
authors = ["Louis Birla <louis.birla@gmail.com>"]
edition = "2018"
homepage = "https://loop.page"
license = "MIT"
readme = "README.md"
repository = "https://github.com/loop-revolution/api"

[dependencies]
log = "0.4.13"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
async-trait = "0.1.42"
chrono = "0.4.19"
jsonwebtoken = "7"
futures = "0.3"
once_cell = "1.7.0"
slab = "0.4.2"
sentry = "0.22"
expo-server-sdk = { git = "https://github.com/big-neon/expo-server-sdk-rust.git", rev = "5e133bce17d76b5cd9ef8e3f9e58dd194a4c453c" }
